mathcing v3.6.3, with Tailwind CSS

--- a/locales/en.json
+++ b/locales/en.json
@@ -14,11 +14,11 @@
   "studioGestureTypeHand": "Hand Gesture",
   "studioGestureTypePose": "Pose Gesture",
   "studioSamplesToRecord": "Samples to Record",
-  "studioConfirmAndStart": "Confirm & Start Camera",
+  "studioConfirmAndStart": "Step 2",
   "studioResetSamples": "Reset",
   "studioRecordSample": "Record ({{count}}/{{needed}})",
   "studioCaptureSample": "Recording ({{countdown}}s)",
-  "studioAnalyzeAndGenerate": "Generate",
+  "studioAnalyzeAndGenerate": "Step 3",
   "studioSamplesLabel": "Samples: {{captured}}/{{needed}}",
   "studioSaveGesture": "Save Gesture",
   "studioStartOver": "Restart",
