--- a/locales/fr.json
+++ b/locales/fr.json
@@ -14,11 +14,11 @@
   "studioGestureTypeHand": "Geste de Main",
   "studioGestureTypePose": "Geste de Pose",
   "studioSamplesToRecord": "Échantillons à Enregistrer",
-  "studioConfirmAndStart": "Confirmer & Démarrer Caméra",
+  "studioConfirmAndStart": "Étape 2",
   "studioResetSamples": "Réinitialiser",
   "studioRecordSample": "Capture ({{count}}/{{needed}})",
   "studioCaptureSample": "Enregistrement ({{countdown}}s)",
-  "studioAnalyzeAndGenerate": "Générer",
+  "studioAnalyzeAndGenerate": "Étape 3",
   "studioSamplesLabel": "Échantillons: {{captured}}/{{needed}}",
   "studioSaveGesture": "Sauvegarder Geste",
   "studioStartOver": "Recommencer",
