--- a/locales/zh.json
+++ b/locales/zh.json
@@ -14,11 +14,11 @@
   "studioGestureTypeHand": "手部手势",
   "studioGestureTypePose": "姿态手势",
   "studioSamplesToRecord": "要录制的样本数",
-  "studioConfirmAndStart": "确认并启动摄像头",
+  "studioConfirmAndStart": "第2步",
   "studioResetSamples": "重置样本",
   "studioRecordSample": "录制样本 ({{count}}/{{needed}})",
   "studioCaptureSample": "正在录制 ({{countdown}}秒)",
-  "studioAnalyzeAndGenerate": "生成",
+  "studioAnalyzeAndGenerate": "第3步",
   "studioSamplesLabel": "样本: {{captured}}/{{needed}}",
   "studioSaveGesture": "保存手势",
   "studioStartOver": "重新开始",
