main v3.6.8, various optim on gesture-studio

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -14,11 +14,11 @@
   "studioGestureTypeHand": "Geste de Main",
   "studioGestureTypePose": "Geste de Pose",
   "studioSamplesToRecord": "Échantillons à Enregistrer",
-  "studioConfirmAndStart": "Étape 2",
+  "studioConfirmAndStart": "Étape Suivante",
   "studioResetSamples": "Réinitialiser",
   "studioRecordSample": "Capture ({{count}}/{{needed}})",
   "studioCaptureSample": "Enregistrement ({{countdown}}s)",
-  "studioAnalyzeAndGenerate": "Étape 3",
+  "studioAnalyzeAndGenerate": "Analyser & Générer",
   "studioSamplesLabel": "Échantillons: {{captured}}/{{needed}}",
   "studioSaveGesture": "Sauvegarder Geste",
   "studioStartOver": "Recommencer",
@@ -44,5 +44,23 @@
   "selectAll": "Tout Sélectionner",
   "deselectAll": "Tout Désélectionner",
   "confirmSelection": "Confirmer",
-  "studioToleranceLabel": "Tolérance de Reconnaissance"
+  "studioToleranceLabel": "Tolérance de Reconnaissance",
+  "studioCreationTypeTitle": "Quel type de geste voulez-vous créer ?",
+  "studioCreationTypeStatic": "Pose Statique",
+  "studioCreationTypeStaticDesc": "Reconnaître une forme de main ou une posture corporelle spécifique et constante.",
+  "studioCreationTypeDynamic": "Mesure Dynamique",
+  "studioCreationTypeDynamicDesc": "Mesurer la distance entre deux points (ex: le pouce et l'index).",
+  "studioStepDefineDynamicTitle": "Étape 2 : Sélectionner & Calibrer",
+  "studioSelectTwoPointsPrompt": "Cliquez sur deux points de repère sur l'image pour mesurer la distance entre eux.",
+  "studioCalibrateMinPrompt": "Positionnez votre main pour la distance minimale (0% confiance) et cliquez sur 'Enregistrer Min'.",
+  "studioCalibrateMaxPrompt": "Positionnez votre main pour la distance maximale (100% confiance) et cliquez sur 'Enregistrer Max'.",
+  "studioRecordMin": "Enregistrer Min",
+  "studioRecordMax": "Enregistrer Max",
+  "studioCalibrationResult": "Résultat du Calibrage",
+  "studioMinDistance": "Distance Min",
+  "studioMaxDistance": "Distance Max",
+  "studioDynamicAnalysisPlaceholder": "Les gestes dynamiques sont définis par calibrage, et non par analyse statistique.",
+  "studioNotCalibrated": "Non calibré",
+  "studioTwoPointsRequired": "Veuillez sélectionner deux points de repère pour continuer.",
+  "studioDistance": "Distance"
 }
