--- a/locales/zh.json
+++ b/locales/zh.json
@@ -14,11 +14,11 @@
   "studioGestureTypeHand": "手部手势",
   "studioGestureTypePose": "姿态手势",
   "studioSamplesToRecord": "要录制的样本数",
-  "studioConfirmAndStart": "第2步",
+  "studioConfirmAndStart": "下一步",
   "studioResetSamples": "重置样本",
   "studioRecordSample": "录制样本 ({{count}}/{{needed}})",
   "studioCaptureSample": "正在录制 ({{countdown}}秒)",
-  "studioAnalyzeAndGenerate": "第3步",
+  "studioAnalyzeAndGenerate": "分析并生成",
   "studioSamplesLabel": "样本: {{captured}}/{{needed}}",
   "studioSaveGesture": "保存手势",
   "studioStartOver": "重新开始",
@@ -44,5 +44,23 @@
   "selectAll": "全选",
   "deselectAll": "取消全选",
   "confirmSelection": "确认选择",
-  "studioToleranceLabel": "识别容差"
+  "studioToleranceLabel": "识别容差",
+  "studioCreationTypeTitle": "您想创建哪种手势？",
+  "studioCreationTypeStatic": "静态姿势",
+  "studioCreationTypeStaticDesc": "识别一个特定的、一致的手型或身体姿势。",
+  "studioCreationTypeDynamic": "动态测量",
+  "studioCreationTypeDynamicDesc": "测量两点之间的距离（例如，拇指和食指之间）。",
+  "studioStepDefineDynamicTitle": "第2步：选择点并校准",
+  "studioSelectTwoPointsPrompt": "在图像上点击两个地标点以测量它们之间的距离。",
+  "studioCalibrateMinPrompt": "将您的手摆成最小距离（0%置信度）的姿势，然后点击“记录最小值”。",
+  "studioCalibrateMaxPrompt": "将您的手摆成最大距离（100%置信度）的姿势，然后点击“记录最大值”。",
+  "studioRecordMin": "记录最小值",
+  "studioRecordMax": "记录最大值",
+  "studioCalibrationResult": "校准结果",
+  "studioMinDistance": "最小距离",
+  "studioMaxDistance": "最大距离",
+  "studioDynamicAnalysisPlaceholder": "动态手势由校准定义，而非统计分析。",
+  "studioNotCalibrated": "未校准",
+  "studioTwoPointsRequired": "请选择两个地标点以继续。",
+  "studioDistance": "距离"
 }
