--- a/locales/en.json
+++ b/locales/en.json
@@ -14,11 +14,11 @@
   "studioGestureTypeHand": "Hand Gesture",
   "studioGestureTypePose": "Pose Gesture",
   "studioSamplesToRecord": "Samples to Record",
-  "studioConfirmAndStart": "Step 2",
+  "studioConfirmAndStart": "Next Step",
   "studioResetSamples": "Reset",
   "studioRecordSample": "Record ({{count}}/{{needed}})",
   "studioCaptureSample": "Recording ({{countdown}}s)",
-  "studioAnalyzeAndGenerate": "Step 3",
+  "studioAnalyzeAndGenerate": "Analyze & Generate",
   "studioSamplesLabel": "Samples: {{captured}}/{{needed}}",
   "studioSaveGesture": "Save Gesture",
   "studioStartOver": "Restart",
@@ -44,5 +44,23 @@
   "selectAll": "Select All",
   "deselectAll": "Deselect All",
   "confirmSelection": "Confirm",
-  "studioToleranceLabel": "Recognition Tolerance"
+  "studioToleranceLabel": "Recognition Tolerance",
+  "studioCreationTypeTitle": "What kind of gesture do you want to create?",
+  "studioCreationTypeStatic": "Static Pose",
+  "studioCreationTypeStaticDesc": "Recognize a specific, consistent hand shape or body pose.",
+  "studioCreationTypeDynamic": "Dynamic Measurement",
+  "studioCreationTypeDynamicDesc": "Measure the distance between two points (e.g., thumb and index finger).",
+  "studioStepDefineDynamicTitle": "Step 2: Select Points & Calibrate",
+  "studioSelectTwoPointsPrompt": "Click two landmarks on the image to measure the distance between them.",
+  "studioCalibrateMinPrompt": "Position your hand for the minimum distance (0% confidence) and click 'Record Min'.",
+  "studioCalibrateMaxPrompt": "Position your hand for the maximum distance (100% confidence) and click 'Record Max'.",
+  "studioRecordMin": "Record Min",
+  "studioRecordMax": "Record Max",
+  "studioCalibrationResult": "Calibration Result",
+  "studioMinDistance": "Min Distance",
+  "studioMaxDistance": "Max Distance",
+  "studioDynamicAnalysisPlaceholder": "Dynamic gestures are defined by calibration, not statistical analysis.",
+  "studioNotCalibrated": "Not Calibrated",
+  "studioTwoPointsRequired": "Please select two landmarks to continue.",
+  "studioDistance": "Distance"
 }
